[gd_scene load_steps=10 format=3 uid="uid://dcgju7hum1jr0"]

[ext_resource type="Script" path="res://scenes/level/level.gd" id="1_fonui"]
[ext_resource type="PackedScene" uid="uid://cnfsq07mpiidt" path="res://scenes/hud/hud.tscn" id="1_u0roi"]
[ext_resource type="PackedScene" uid="uid://utv3iherymmo" path="res://scenes/enemies/basic/enemy.tscn" id="2_r8rmx"]
[ext_resource type="Texture2D" uid="uid://d0sa1noq6co2o" path="res://scenes/level/sprites/Level1a.png" id="3_4cv5a"]
[ext_resource type="AudioStream" uid="uid://im24qg5ceh5o" path="res://scenes/level/music/War-Pigs_CR.ogg" id="3_b51xp"]
[ext_resource type="PackedScene" uid="uid://bhwaw84opq5v8" path="res://scenes/enemies/gunsmith/gunsmith.tscn" id="3_nxtty"]
[ext_resource type="PackedScene" uid="uid://d12qxfb041sbj" path="res://scenes/bonus/bonus.tscn" id="3_r0ekl"]
[ext_resource type="Texture2D" uid="uid://ckw008iyhsgp7" path="res://scenes/level/sprites/clouds.png" id="4_wm4v0"]
[ext_resource type="PackedScene" uid="uid://cf45sfajus3fb" path="res://scenes/player/player.tscn" id="5_bd7ke"]

[node name="Level" type="Node2D"]
script = ExtResource("1_fonui")
Enemy = ExtResource("2_r8rmx")
Gundsmith = ExtResource("3_nxtty")
Bonus = ExtResource("3_r0ekl")

[node name="HUD" parent="." instance=ExtResource("1_u0roi")]

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_b51xp")
volume_db = -27.006

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
position = Vector2(0, 2)
motion_mirroring = Vector2(0, 970)

[node name="Sprite2D" type="Sprite2D" parent="Background/ParallaxLayer"]
position = Vector2(-78, -2)
scale = Vector2(1.21631, 0.886654)
texture = ExtResource("3_4cv5a")
centered = false

[node name="Clouds01" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Clouds01"]
modulate = Color(1, 1, 1, 0.376471)
motion_mirroring = Vector2(0, 970)

[node name="Sprite2D" type="Sprite2D" parent="Clouds01/ParallaxLayer"]
position = Vector2(-90, 109)
scale = Vector2(2.76466, 1.02205)
texture = ExtResource("4_wm4v0")
centered = false

[node name="Clouds02" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Clouds02"]
modulate = Color(1, 1, 1, 0.713726)
motion_mirroring = Vector2(0, 970)

[node name="Sprite2D" type="Sprite2D" parent="Clouds02/ParallaxLayer"]
position = Vector2(-92, 302)
scale = Vector2(2.77416, 1.65544)
texture = ExtResource("4_wm4v0")
centered = false

[node name="Player" parent="." groups=["level"] instance=ExtResource("5_bd7ke")]
position = Vector2(259, 867)

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.694

[node name="BonusTimer" type="Timer" parent="."]

[connection signal="game_over" from="HUD" to="." method="_on_hud_game_over"]
[connection signal="tree_exiting" from="Player" to="HUD" method="_on_player_tree_exiting"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="BonusTimer" to="." method="_on_bonus_timer_timeout"]
